<?xml version="1.0" encoding="utf-8"?>
<com.github.ksoichiro.android.observablescrollview.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/observableScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".core.MainActivity"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/parallaxLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/movieBackdropPathImageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/parallax_image_height"
                    android:scaleType="centerCrop"
                    android:src="@drawable/back"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="ContentDescription" />

                <View
                    android:id="@+id/alphaView"
                    app:layout_constraintTop_toTopOf="@id/movieBackdropPathImageView"
                    app:layout_constraintStart_toStartOf="@id/movieBackdropPathImageView"
                    app:layout_constraintEnd_toEndOf="@id/movieBackdropPathImageView"
                    app:layout_constraintBottom_toBottomOf="@id/movieBackdropPathImageView"
                    android:background="#CC000000"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" />

                <ImageView
                    android:id="@+id/posterImageView"
                    android:layout_width="70dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/poster"
                    app:layout_constraintBottom_toBottomOf="@+id/alphaView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/alphaView" />

                <TextView
                    android:id="@+id/movieTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/movie_title"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/posterImageView"
                    app:layout_constraintTop_toTopOf="@+id/posterImageView"
                    />

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/movieScoreArcProgress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:arc_bottom_text="Score"
                    app:arc_bottom_text_size="8dp"
                    app:arc_finished_color="@color/white"
                    app:arc_progress="55"
                    app:arc_suffix_text_padding="0dp"
                    app:arc_suffix_text_size="10sp"
                    app:arc_text_color="@color/white"
                    app:arc_text_size="15sp"
                    app:arc_unfinished_color="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/posterImageView"
                    app:layout_constraintTop_toBottomOf="@+id/movieTextView" />


                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/movieGenreTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/movieScoreArcProgress"
                    app:layout_constraintTop_toBottomOf="@+id/movieTextView" />

            </android.support.constraint.ConstraintLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/favoriteFloatingActionButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_heart"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parallaxLayout" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_marginStart="@dimen/activity"
                android:layout_marginEnd="@dimen/activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/parallaxLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <android.support.constraint.ConstraintLayout
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/youtubeButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AlertButton"
                        android:text="@string/play_youtube"
                        android:drawableStart="@drawable/ic_youtube"
                        />

                    <TextView
                        android:id="@+id/movieOverviewTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/youtubeButton"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/overview"
                        />

                    <TextView
                        android:id="@+id/movieReleaseDateTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/movieOverviewTextView"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/release_date"
                        />

                    <TextView
                        android:id="@+id/movieCastTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/cast"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movieReleaseDateTextView" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/movieCastRecyclerView"
                        android:scrollbars="vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:layout_constraintTop_toBottomOf="@+id/movieCastTextView"
                        >
                    </android.support.v7.widget.RecyclerView>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</com.github.ksoichiro.android.observablescrollview.ObservableScrollView>